began styling, swapped to scss for simplicity

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 
   <title>HTML / CSS & JavaScript Cheatsheet</title>
 
+  <link rel="stylesheet" href="./public/style.css">
+
 </head>
 <body>
 
   <!-- Title and Navigation elements -->
-  <header>
+  <header class="page-header">
     <h1>HTML / CSS & JS Cheatsheet</h1>
-    <nav>
+    <nav class="navigation">
       <ul>
         <li><a href="#html">HTML</a></li>
         <li><a href="#css">CSS</a></li>
@@ -62,7 +64,7 @@
       </article>
 
       <article>
-        <h3>Semantic HTML Elements</h3>
+        <h3>Semantic HTML</h3>
         <table>
           <thead>
             <tr>
