--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
   <title>HTML / CSS & JavaScript Cheatsheet</title>
 
   <link rel="stylesheet" href="./public/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
 
 </head>
 <body>
 
   <!-- Title and Navigation elements -->
   <header class="page-header">
-    <h1>HTML / CSS & JS Cheatsheet</h1>
+    <h1>HTML / CSS & JS <span class="colored">Cheatsheet</span></h1>
     <nav class="navigation">
       <ul>
         <li><a href="#html">HTML</a></li>
